--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     grid-template-areas: "rzeczy reszta";
     margin: 0px;
     
+    
 }
 #rzeczy{
     grid-area: rzeczy;
@@ -13,4 +14,33 @@
 #reszta{
     grid-area: reszta;
     background-color: rgb(101, 136, 170);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    overflow-y: scroll;
+    
+}
+.divy1{
+    
+    border-radius: 25px;
+    background-color: #02ff39;
+    border: 2px solid #01944b;
+    padding: 20px;
+    width: 200px;
+    height: 195px;
+    gap: 15px;
+    
+}
+.divy0{
+    
+    border-radius: 25px;
+    background-color: #ff0000;
+    border: 2px solid #7a0606;
+    padding: 20px;
+    width: 200px;
+    height: 195px;
+    gap: 15px;
 }
